--- a/_config.yml
+++ b/_config.yml
@@ -1,4 +1,6 @@
-# This is the default format. 
+markdown: kramdown
+
+# This is the default format.
 # For more see: http://jekyllrb.com/docs/permalinks/
 permalink: /:categories/:year/:month/:day/:title 
 
